[gd_scene load_steps=11 format=3 uid="uid://71rc8k32st6a"]

[ext_resource type="Script" uid="uid://cged4wdm7o1j0" path="res://scripts/player.gd" id="1_qm0ti"]
[ext_resource type="Texture2D" uid="uid://ceomkl5mknhy0" path="res://ships/Spaceship(1).png" id="2_g2els"]
[ext_resource type="Script" uid="uid://bkne57gikkxc6" path="res://scripts/spawner.gd" id="3_3li8b"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_pqap4"]
radius = 44.0
height = 132.0

[sub_resource type="Gradient" id="Gradient_g2els"]
offsets = PackedFloat32Array(0, 0.116279, 0.530233, 1)
colors = PackedColorArray(1, 0.960784, 1, 0, 1, 1, 0, 1, 1, 0, 0, 1, 0.32, 0.32, 0.32, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_qhqgy"]
gradient = SubResource("Gradient_g2els")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_g2els"]
particle_flag_disable_z = true
emission_shape_scale = Vector3(10, 20, 1)
emission_shape = 1
emission_sphere_radius = 1.0
angle_min = 1.07288e-05
angle_max = 360.0
velocity_pivot = Vector3(10, 0, 0)
direction = Vector3(0, 1, 0)
spread = 20.0
initial_velocity_min = 500.0
initial_velocity_max = 1000.0
angular_velocity_min = -100.0
angular_velocity_max = 100.0
orbit_velocity_min = 9.49949e-08
orbit_velocity_max = 9.49949e-08
radial_velocity_min = -2.23517e-05
radial_velocity_max = 0.999978
gravity = Vector3(0, 0, 0)
damping_min = 1000.0
damping_max = 1000.0
scale_min = 2.0
scale_max = 10.0
color_ramp = SubResource("GradientTexture1D_qhqgy")

[sub_resource type="Gradient" id="Gradient_3li8b"]
colors = PackedColorArray(0, 0, 0, 0, 0.97, 0.97, 0.97, 0.027451)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_mdl7e"]
noise_type = 2
frequency = 0.0013

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_qu4a1"]
width = 4000
height = 2250
color_ramp = SubResource("Gradient_3li8b")
noise = SubResource("FastNoiseLite_mdl7e")

[node name="CharacterBody2D" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_qm0ti")
metadata/_edit_horizontal_guides_ = [-1030.0]
metadata/_edit_vertical_guides_ = [-1870.0]

[node name="Sprite" type="Sprite2D" parent="."]
rotation = 3.14159
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_g2els")

[node name="Shooter" type="Marker2D" parent="Sprite"]
position = Vector2(91.9995, 200)
rotation = -3.14159
scale = Vector2(4, 4)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite"]
position = Vector2(-2.02815e-05, 8)
rotation = -1.57079
scale = Vector2(4, 4)
shape = SubResource("CapsuleShape2D_pqap4")

[node name="ExhaustBackLeft" type="GPUParticles2D" parent="Sprite"]
position = Vector2(172, -132)
rotation = -3.14159
scale = Vector2(4, 4)
emitting = false
amount = 200
lifetime = 0.35
randomness = 1.0
fixed_fps = 120
process_material = SubResource("ParticleProcessMaterial_g2els")

[node name="ExhaustBackRight" type="GPUParticles2D" parent="Sprite"]
position = Vector2(-172, -140)
rotation = -3.14159
scale = Vector2(4, 4)
emitting = false
amount = 200
lifetime = 0.35
randomness = 1.0
fixed_fps = 120
process_material = SubResource("ParticleProcessMaterial_g2els")

[node name="ExhaustSideLeft" type="GPUParticles2D" parent="Sprite"]
position = Vector2(276, 0.00069971)
rotation = -1.57079
scale = Vector2(4, 4)
emitting = false
amount = 200
lifetime = 0.35
randomness = 1.0
fixed_fps = 120
process_material = SubResource("ParticleProcessMaterial_g2els")

[node name="ExhaustSideRight" type="GPUParticles2D" parent="Sprite"]
position = Vector2(-276, -0.00069971)
rotation = 1.5708
scale = Vector2(4, 4)
emitting = false
amount = 200
lifetime = 0.35
randomness = 1.0
fixed_fps = 120
process_material = SubResource("ParticleProcessMaterial_g2els")

[node name="ExhaustFront" type="GPUParticles2D" parent="Sprite"]
position = Vector2(-0.00041577, 164)
scale = Vector2(4, 4)
emitting = false
amount = 200
lifetime = 0.35
randomness = 1.0
fixed_fps = 120
process_material = SubResource("ParticleProcessMaterial_g2els")

[node name="Spawner" type="Node2D" parent="."]
position = Vector2(-23, -5)
script = ExtResource("3_3li8b")

[node name="Camera" type="Camera2D" parent="."]
position = Vector2(-23, -5)
zoom = Vector2(0.5, 0.5)

[node name="Noise" type="TextureRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4888.0
offset_top = -4956.0
offset_right = 5112.0
offset_bottom = 5044.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("NoiseTexture2D_qu4a1")
stretch_mode = 3
